# wireguard-p2p

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile.build  README.md  after-install.sh  after-update.sh  before-deploy.sh  requirements.txt  setup.py  test.sh  test_netns.sh
etc/: wireguard-p2p.conf
etc/init.d/: wireguard-p2p
src/: api.rs  args.rs  bulletinboard.rs  cmd_daemon.rs  cmd_publish.rs  cmd_search.rs  config.rs  crypto.rs  daemon.rs  dht.rs  dht_encoding.rs  duplicate.rs  exchange.rs  fake.rs  interval.rs  main.rs  main_exchange.rs  main_p2p.rs  message.rs  proxy_connection.rs  publish.rs  report_errors.rs  search.rs  serialization.rs  serialize.rs  stun.rs  traffic.rs  utils.rs  wg.rs  wg_cmd.rs  wg_device.rs
src/exchange/: args.rs  encoding.rs  mod.rs
src/p2p/: args.rs  encoding.rs  mod.rs  traffic.rs
src/stun/: codec.rs  mod.rs
wg-p2p/: dht.py  main.py  nat.py  update.py  utils.py
wg_p2p/: add_peer.py  config.py  daemon.py  dht.py  log.py  main.py  multiplexer.py  nat.py  new.py  publish.py  update.py
