[package]
name = "wireguard-p2p"
version = "0.2.0"
description = "A WireGuard peer-to-peer client"
license = "LGPL-2.1+"
authors = ["Manuel Schölling <manuel.schoelling@posteo.de>"]
edition = "2018"

[dependencies]
async-trait = "0.1.29"
base64 = "0.12.0"
sodiumoxide = "0.2.5"
opendht = "0.4.1" #{ path = "../opendht-rs" }
futures = "0.3.4"
stun3489 = "0.5.0" #{ path = "../stun3489" }
wireguard-tools-rs = "0.1.0"
bytes = "0.5.4"
ansi_term = "0.12.1"
rand = "0.6.1"
libc = "0.2.69"
clap = "2.33.0"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes", "unstable"]
