[package]
name = "wireguard-p2p"
version = "0.3.0"
description = "A WireGuard peer-to-peer client"
license = "LGPL-2.1+"
authors = ["Manuel Schölling <manuel.schoelling@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.8", features = ["attributes", "unstable"] }
async-trait = "0.1.4"
anyhow = "1.0"
bytes = "0.6"
slog = "2.7.0"
slog-async = "2.5.0"
slog-term = "2.6.0"
base64 = "0.13.0"
async-stream = "0.3.0"
futures = "0.3.8"
sodiumoxide = "0.2.6"
wireguard-uapi = "1.0.5"
byteorder = "1.3.4"
rand = { version = "0.8.0", features = ["small_rng"] }
lazy_static = "1.4.0"
opendht = "0.5.2"
clap = "2.33.3"
